package com.example.bird;

public class Constants {
    public static int SCREEN_WIDTH;
    public static int SCREEN_HEIGHT;

}
